--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_responsive:
+  flutter_responsiveness:
     path: ../
 
   # The following adds the Cupertino Icons font to your application.
